--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <frameset rows="36%,6%,*,10%">
     <frame name="top"noresize scrolling="no" frameborder="0" src="Welcome to Language Arts Google Classroom Header in Yellow Pink Illustrative Doodle Style (4).png">
     <frame name="dtop" src="lan.html" noresize scrolling="no" frameborder="0">
-<frameset cols="15%,*">
+<body bgcolor="fff0b4"><frameset cols="15%,*">
     <frame name="manu" noresize scrolling="no" frameborder="0" src="menu.html">
     <frame name="main" noresize frameborder="0">
- </frameset>
+ </frameset></body>
  <frameset rows>
     <frame name="footer" noresize frameborder="0" src="puj.html">
 
@@ -21,7 +21,7 @@
 </frameset>
 
 
-<body>
+
     
 </body>
 </html>
